# tpm_sign

./: .gitignore  Cargo.toml  gen_keys.sh  gen_policies.sh  key.der  key.priv  key.pub  test_run.sh
ecc/: key_ecc.der  key_ecc.priv  key_ecc.pub
policy/: authorized.policy  pcr.policy_desired  pcr.signature  pcr0.sha256  policy_key.der  signing_key.ctx  signing_key.name  signing_key_private.pem  signing_key_public.pem
rsa/: key2.priv  key2.pub
src/: main.rs  main2.rs  sign.rs
